--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -15,115 +15,13 @@
 
 <body>
 
-    <header class="@((ViewContext.RouteData.Values["Action"]!.ToString() == "Contact") ? "contact" : "standard")">
-        <div class="container">
-            <a href="/" id="logo">
-                <img src="~/images/silicon-logo.svg" alt="Silicon">
-            </a>
-
-            <div id="menu">
-                <nav>
-                   @if (_signInManager.IsSignedIn(User))
-					{
-                        <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                        <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                    }
-                    else
-                    {
-                        <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                    }
-
-                </nav>
-            </div>
-
-
-            <div class="btn-switch">
-                <span>Light</span>
-                <div class="switch">
-                    <input type="checkbox" id="switch">
-                    <label for="switch" class="slider round"></label>
-                </div>
-                <span>Dark</span>
-            </div>
-
-            <div class="account-buttons">
-
-                @if (_signInManager.IsSignedIn(User))
-                {
-                    <a asp-controller="Account" asp-action="LogOut" class="btn-theme"><i class="fa-regular fa-arrow-right-from-bracket"></i>Log Out</a>
-                }
-                else
-                {
-                    <a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
-                    <a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
-                }
-            </div>
-
-            <div class="btn-mobile">
-                <button class="btn" id="mobile-menu-btn" aria-controls="btn-switch"><i class="fa-solid fa-bars"></i></button>
-            </div>
-        </div>
-
-        <div id="mobile-menu" class="open" aria-expanded="false">
-
-            <div class="btn-switch">
-                <span>Light</span>
-                <div class="switch">
-                    <input type="checkbox" id="switch" role="switch" />
-                    <label for="switch" class="slider round"></label>
-                </div>
-                <span>Dark</span>
-            </div>
-
-            <div class="account-buttons">
-                
-                @if (_signInManager.IsSignedIn(User))
-                {
-                    <a asp-controller="Account" asp-action="LogOut" class="btn-theme"><i class="fa-regular fa-arrow-right-from-bracket"></i>Log Out</a>
-                }
-                else
-                {
-                    <a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
-                    <a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
-                }
-
-                <nav>
-                    @if (_signInManager.IsSignedIn(User))
-                    {
-                        <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                        <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                    }
-                    else
-                    {
-                        <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
-                    }
-                </nav>
-
-            </div>
-        </div>  
-    </header>
+    @await Html.PartialAsync("~/Views/Shared/_headerPartial.cshtml")
     <main>
         @RenderBody()
     </main>
-    
+    @await Html.PartialAsync("~/Views/Shared/_footerPartial.cshtml")
         
-    <footer>
-        <div class="container">
-            <div class="@((ViewContext.RouteData.Values["Controller"]!.ToString() == "Auth") ? " d-none" : "social-media")">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-x"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-            </div>
-            <p class="gray-600">© @DateTime.Now.Year Silicon. All rights reserved. Pulvinar urna condimentum amet tempor, ornare integer. Lorem odio justo malesuada suspendisse viverra aliquet quisque turpis non. Feugiat in odio non nunc ornare consectetur.</p>
-        </div>
-    </footer>
+
 
     <script defer src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
