--- a/WebApp/Views/Shared/Sections/Account/_Account-details.cshtml
+++ b/WebApp/Views/Shared/Sections/Account/_Account-details.cshtml
@@ -12,8 +12,8 @@
 				<img src="#" alt="User Image" />
 			</div>
 			<div class="nav-name-info">
-				<h2 class="h5 gray-900">John Doe</h2>
-				<p class="gray-700">john.doe@domain.com</p>
+				<h2 class="h5 gray-900">@Model.AccountBasic.FirstName @Model.AccountBasic.LastName</h2>
+				<p class="gray-700">@Model.AccountBasic.Email</p>
 			</div>
 			<div class="nav-buttons">
 				<a asp-controller="Account" asp-action="Index" class="btn-theme"><i class="fa-regular fa-gear"></i>Account Details</a>
@@ -24,7 +24,7 @@
 		</div>
 		<div class="account-details">
 			<h1 class="h2">@Model.Title</h1>
-			<form class="basic" method="post" asp-controller="Account" asp-action="Index" novalidate>
+			<form class="basic" method="post" asp-controller="Account" asp-action="Basic" novalidate>
 				<h3 class="h5">@Model.AccountBasic.Title</h3>
 				<div class="basic-content">
 					<div id="basic-firstname" class="basic-group">
@@ -61,16 +61,16 @@
 			</form>
 
 
-			<form class="address" method="post" asp-controller="Account" asp-action="Index" novalidate>
+			<form class="address" method="post" asp-controller="Account" asp-action="Address" novalidate>
 				<h4 class="h5">@Model.AccountAddress.Title</h4>
 				<div class="address-content">
 					<div id="address-line1" class="address-group">
-						<label asp-for=AccountAddress.AdressLine1></label>
-						<input asp-for="AccountAddress.AdressLine1" />
+						<label asp-for=AccountAddress.AddressLine1></label>
+						<input asp-for="AccountAddress.AddressLine1" />
 					</div>
 					<div id="address-line2" class="address-group">
-						<label asp-for=AccountAddress.AdressLine2></label>
-						<input asp-for="AccountAddress.AdressLine2" />
+						<label asp-for=AccountAddress.AddressLine2></label>
+						<input asp-for="AccountAddress.AddressLine2" />
 					</div>
 					<div id="address-postalcode" class="address-group">
 						<label asp-for="AccountAddress.PostalCode"></label>
