--- a/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
@@ -92,6 +92,181 @@
                 }
             }
         }
+
+        .course-grid {
+
+
+            .course-item {
+                display: grid;
+                grid-template-columns: 1fr;
+                gap: 1rem;
+
+
+                @include lg {
+                    grid-template-columns: 1fr 1fr;
+                    gap: 1rem;
+                }
+
+                @include xxl {
+                    grid-template-columns: 1fr 1fr;
+                }
+
+
+                .course-box {
+                    display: flex;
+                    flex-direction: column;
+                    border-bottom-left-radius: 0.9rem !important;
+                    border-bottom-right-radius: 0.9rem !important;
+                    overflow: hidden;
+
+                    &:hover {
+                        transition: all 0.15s ease-in-out;
+                        cursor: pointer;
+                        @include shadow-l;
+                    }
+
+
+                    .image-and-best {
+                        position: relative;
+
+                        .main-image {
+                            width: 100%;
+                            height: auto;
+                            border-top-left-radius: 0.9rem !important;
+                            border-top-right-radius: 0.9rem !important;
+                            transition: transform 0.3s ease-in-out;
+                        }
+
+                        .bookmark {
+                            background-color: white;
+                            color: $gray-900;
+                            position: absolute;
+                            top: 1rem;
+                            right: 1rem;
+                            border-radius: 4rem;
+                            width: 2rem;
+                            height: 2rem;
+                            border: none;
+
+                            &:hover {
+                                background-color: $theme;
+                                color: white;
+                            }
+
+                            &:hover::before {
+                                content: attr(title);
+                                position: absolute;
+                                bottom: 50%;
+                                left: -190%;
+                                transform: translateX(-50%);
+                                background-color: black;
+                                color: $gray-500;
+                                padding: 5px 10px;
+                                border-radius: 5px;
+                                font-size: 12px;
+                                font-weight: 700;
+                                white-space: nowrap;
+                            }
+                        }
+
+                        article {
+
+                            .best {
+                                position: absolute;
+                                top: 1rem;
+                                left: 1rem;
+                            }
+                        }
+                    }
+
+                    &:hover .image-and-best {
+                        .main-image {
+                            transform: scale(1.1);
+                        }
+                    }
+
+
+                    h2 {
+                        padding: 1rem;
+                        max-width: 80%;
+
+                        @include lg {
+                            max-width: 90%;
+                        }
+                    }
+
+                    p {
+                        padding-left: 1rem;
+                    }
+
+                    .price-and-discount {
+                        display: flex;
+                        font-weight: 700;
+
+                        .discount {
+                            margin-right: 1rem;
+                            font-size: 18px;
+                            color: $danger;
+                        }
+
+                        .price-crossed {
+                            font-size: 16px;
+                            text-decoration: line-through;
+                        }
+
+                        .price {
+                        }
+                    }
+
+                    .end-line {
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                        border-top: 1px solid $gray-500;
+                        padding-bottom: 1.5rem;
+                        margin-left: 1rem;
+                        width: 90%;
+                    }
+
+                    .course-footer {
+                        display: flex;
+                        align-items: center;
+                        padding-left: 1rem;
+                        padding-bottom: 1rem;
+
+
+                        .time {
+                            display: flex;
+                            align-items: center;
+
+                            i {
+                                margin-right: .3rem;
+                            }
+
+                            p {
+                                margin: 0;
+                                margin-right: 2rem;
+                                padding: 0;
+                            }
+                        }
+                    }
+
+                    .likes {
+                        display: flex;
+                        align-items: center;
+
+                        i {
+                            margin-right: .3rem;
+                        }
+
+                        p {
+                            margin: 0;
+                            padding: 0;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -190,6 +365,180 @@
 
                         &:hover {
                             background-color: #6366F1;
+                        }
+                    }
+                }
+            }
+
+            .course-grid {
+
+
+                .course-item {
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    gap: 1rem;
+
+
+                    @include lg {
+                        grid-template-columns: 1fr 1fr;
+                        gap: 1rem;
+                    }
+
+                    @include xxl {
+                        grid-template-columns: 1fr 1fr;
+                    }
+
+
+                    .course-box {
+                        display: flex;
+                        flex-direction: column;
+                        background-color: black;
+                        overflow: hidden;
+                        border-bottom-left-radius: 15px !important;
+                        border-bottom-right-radius: 15px !important;
+
+                        &:hover {
+                            cursor: pointer;
+                            @include theme-shadow;
+                        }
+
+                        .image-and-best {
+                            position: relative;
+
+                            .main-image {
+                                width: 100%;
+                                height: auto;
+                                border-top-left-radius: 0.9rem !important;
+                                border-top-right-radius: 0.9rem !important;
+                                transition: transform 0.3s ease-in-out;
+                            }
+
+                            .bookmark {
+                                background-color: white;
+                                color: $gray-900;
+                                position: absolute;
+                                top: 1rem;
+                                right: 1rem;
+                                border-radius: 4rem;
+                                width: 2rem;
+                                height: 2rem;
+                                border: none;
+
+                                &:hover {
+                                    background-color: $theme;
+                                    color: white;
+                                }
+
+                                &:hover::before {
+                                    content: attr(title);
+                                    position: absolute;
+                                    bottom: 50%;
+                                    left: -190%;
+                                    transform: translateX(-50%);
+                                    background-color: black;
+                                    color: $gray-500;
+                                    padding: 5px 10px;
+                                    border-radius: 5px;
+                                    font-size: 12px;
+                                    font-weight: 700;
+                                    white-space: nowrap;
+                                }
+                            }
+
+                            article {
+                                .best {
+                                    position: absolute;
+                                    top: 1rem;
+                                    left: 1rem;
+                                }
+                            }
+                        }
+
+                        &:hover .image-and-best {
+                            .main-image {
+                                transform: scale(1.1);
+                            }
+                        }
+                    }
+
+                    h2 {
+                        padding: 1rem;
+                        max-width: 80%;
+                        color: $gray-300;
+
+                        @include lg {
+                            max-width: 90%;
+                        }
+                    }
+
+                    p {
+                        padding-left: 1rem;
+                        color: $gray-500;
+                    }
+
+                    .price-and-discount {
+                        display: flex;
+                        font-weight: 700;
+
+                        .discount {
+                            margin-right: 1rem;
+                            font-size: 18px;
+                            color: $danger;
+                        }
+
+                        .price-crossed {
+                            font-size: 16px;
+                            text-decoration: line-through;
+                        }
+
+                        .price {
+                        }
+                    }
+
+                    .end-line {
+                        display: flex;
+                        justify-content: center;
+                        align-content: center;
+                        border-top: 1px solid $gray-300;
+                        padding-bottom: 1.5rem;
+                        margin-left: 1rem;
+                        width: 90%;
+                    }
+
+                    .course-footer {
+                        display: flex;
+                        align-items: center;
+                        padding-left: 1rem;
+                        padding-bottom: 1rem;
+
+
+                        .time {
+                            display: flex;
+                            align-items: center;
+
+                            i {
+                                margin-right: .3rem;
+                            }
+
+                            p {
+                                margin: 0;
+                                margin-right: 2rem;
+                                padding: 0;
+                            }
+                        }
+                    }
+
+                    .likes {
+                        display: flex;
+                        align-items: center;
+
+                        i {
+                            margin-right: .3rem;
+                        }
+
+                        p {
+                            margin: 0;
+                            padding: 0;
                         }
                     }
                 }
