--- a/WebApp/wwwroot/css/scss/sections/_allCourses.scss
+++ b/WebApp/wwwroot/css/scss/sections/_allCourses.scss
@@ -116,6 +116,21 @@
                                 background-color: $theme;
                                 color: white;
                             }
+
+                            &:hover::before {
+                                content: attr(title);
+                                position: absolute;
+                                bottom: 50%;
+                                left: -150%;
+                                transform: translateX(-50%);
+                                background-color: black;
+                                color: $gray-500;
+                                padding: 5px 10px;
+                                border-radius: 5px;
+                                font-size: 12px;
+                                font-weight: 700;
+                                white-space: nowrap;
+                            }
                         }
 
                         article {
@@ -337,6 +352,21 @@
                                 &:hover {
                                     background-color: $theme;
                                     color: white;
+                                }
+
+                                &:hover::before {
+                                    content: attr(title);
+                                    position: absolute;
+                                    bottom: 50%;
+                                    left: -150%;
+                                    transform: translateX(-50%);
+                                    background-color: black;
+                                    color: $gray-500;
+                                    padding: 5px 10px;
+                                    border-radius: 5px;
+                                    font-size: 12px;
+                                    font-weight: 700;
+                                    white-space: nowrap;
                                 }
                             }
 
