--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -3505,6 +3505,144 @@ footer .container .social-media a:hover {
 #saved-items .container .account-nav .nav-buttons .btn-gray:hover {
   background-color: #6366F1;
 }
+#saved-items .container .course-grid .course-item {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+@media (min-width: 992px) {
+  #saved-items .container .course-grid .course-item {
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+}
+@media (min-width: 1400px) {
+  #saved-items .container .course-grid .course-item {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+#saved-items .container .course-grid .course-item .course-box {
+  display: flex;
+  flex-direction: column;
+  border-bottom-left-radius: 0.9rem !important;
+  border-bottom-right-radius: 0.9rem !important;
+  overflow: hidden;
+}
+#saved-items .container .course-grid .course-item .course-box:hover {
+  transition: all 0.15s ease-in-out;
+  cursor: pointer;
+  box-shadow: 0px 4px 13px -2px rgba(19, 16, 34, 0.06), 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.1);
+}
+#saved-items .container .course-grid .course-item .course-box .image-and-best {
+  position: relative;
+}
+#saved-items .container .course-grid .course-item .course-box .image-and-best .main-image {
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 0.9rem !important;
+  border-top-right-radius: 0.9rem !important;
+  transition: transform 0.3s ease-in-out;
+}
+#saved-items .container .course-grid .course-item .course-box .image-and-best .bookmark {
+  background-color: white;
+  color: #0B0F19;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border-radius: 4rem;
+  width: 2rem;
+  height: 2rem;
+  border: none;
+}
+#saved-items .container .course-grid .course-item .course-box .image-and-best .bookmark:hover {
+  background-color: #6366F1;
+  color: white;
+}
+#saved-items .container .course-grid .course-item .course-box .image-and-best .bookmark:hover::before {
+  content: attr(title);
+  position: absolute;
+  bottom: 50%;
+  left: -190%;
+  transform: translateX(-50%);
+  background-color: black;
+  color: #B4B7C9;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+#saved-items .container .course-grid .course-item .course-box .image-and-best article .best {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+#saved-items .container .course-grid .course-item .course-box:hover .image-and-best .main-image {
+  transform: scale(1.1);
+}
+#saved-items .container .course-grid .course-item .course-box h2 {
+  padding: 1rem;
+  max-width: 80%;
+}
+@media (min-width: 992px) {
+  #saved-items .container .course-grid .course-item .course-box h2 {
+    max-width: 90%;
+  }
+}
+#saved-items .container .course-grid .course-item .course-box p {
+  padding-left: 1rem;
+}
+#saved-items .container .course-grid .course-item .course-box .price-and-discount {
+  display: flex;
+  font-weight: 700;
+}
+#saved-items .container .course-grid .course-item .course-box .price-and-discount .discount {
+  margin-right: 1rem;
+  font-size: 18px;
+  color: #EF4444;
+}
+#saved-items .container .course-grid .course-item .course-box .price-and-discount .price-crossed {
+  font-size: 16px;
+  text-decoration: line-through;
+}
+#saved-items .container .course-grid .course-item .course-box .end-line {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  border-top: 1px solid #B4B7C9;
+  padding-bottom: 1.5rem;
+  margin-left: 1rem;
+  width: 90%;
+}
+#saved-items .container .course-grid .course-item .course-box .course-footer {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+}
+#saved-items .container .course-grid .course-item .course-box .course-footer .time {
+  display: flex;
+  align-items: center;
+}
+#saved-items .container .course-grid .course-item .course-box .course-footer .time i {
+  margin-right: 0.3rem;
+}
+#saved-items .container .course-grid .course-item .course-box .course-footer .time p {
+  margin: 0;
+  margin-right: 2rem;
+  padding: 0;
+}
+#saved-items .container .course-grid .course-item .course-box .likes {
+  display: flex;
+  align-items: center;
+}
+#saved-items .container .course-grid .course-item .course-box .likes i {
+  margin-right: 0.3rem;
+}
+#saved-items .container .course-grid .course-item .course-box .likes p {
+  margin: 0;
+  padding: 0;
+}
 
 .dark-mode #saved-items {
   padding-bottom: 2rem;
@@ -3588,6 +3726,146 @@ footer .container .social-media a:hover {
 }
 .dark-mode #saved-items .container .account-nav .nav-buttons .btn-gray:hover {
   background-color: #6366F1;
+}
+.dark-mode #saved-items .container .course-grid .course-item {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+@media (min-width: 992px) {
+  .dark-mode #saved-items .container .course-grid .course-item {
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+}
+@media (min-width: 1400px) {
+  .dark-mode #saved-items .container .course-grid .course-item {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  overflow: hidden;
+  border-bottom-left-radius: 15px !important;
+  border-bottom-right-radius: 15px !important;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box:hover {
+  cursor: pointer;
+  box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.9);
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box .image-and-best {
+  position: relative;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box .image-and-best .main-image {
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 0.9rem !important;
+  border-top-right-radius: 0.9rem !important;
+  transition: transform 0.3s ease-in-out;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box .image-and-best .bookmark {
+  background-color: white;
+  color: #0B0F19;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border-radius: 4rem;
+  width: 2rem;
+  height: 2rem;
+  border: none;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box .image-and-best .bookmark:hover {
+  background-color: #6366F1;
+  color: white;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box .image-and-best .bookmark:hover::before {
+  content: attr(title);
+  position: absolute;
+  bottom: 50%;
+  left: -190%;
+  transform: translateX(-50%);
+  background-color: black;
+  color: #B4B7C9;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box .image-and-best article .best {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-box:hover .image-and-best .main-image {
+  transform: scale(1.1);
+}
+.dark-mode #saved-items .container .course-grid .course-item h2 {
+  padding: 1rem;
+  max-width: 80%;
+  color: #E2E5F1;
+}
+@media (min-width: 992px) {
+  .dark-mode #saved-items .container .course-grid .course-item h2 {
+    max-width: 90%;
+  }
+}
+.dark-mode #saved-items .container .course-grid .course-item p {
+  padding-left: 1rem;
+  color: #B4B7C9;
+}
+.dark-mode #saved-items .container .course-grid .course-item .price-and-discount {
+  display: flex;
+  font-weight: 700;
+}
+.dark-mode #saved-items .container .course-grid .course-item .price-and-discount .discount {
+  margin-right: 1rem;
+  font-size: 18px;
+  color: #EF4444;
+}
+.dark-mode #saved-items .container .course-grid .course-item .price-and-discount .price-crossed {
+  font-size: 16px;
+  text-decoration: line-through;
+}
+.dark-mode #saved-items .container .course-grid .course-item .end-line {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  border-top: 1px solid #E2E5F1;
+  padding-bottom: 1.5rem;
+  margin-left: 1rem;
+  width: 90%;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-footer {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-footer .time {
+  display: flex;
+  align-items: center;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-footer .time i {
+  margin-right: 0.3rem;
+}
+.dark-mode #saved-items .container .course-grid .course-item .course-footer .time p {
+  margin: 0;
+  margin-right: 2rem;
+  padding: 0;
+}
+.dark-mode #saved-items .container .course-grid .course-item .likes {
+  display: flex;
+  align-items: center;
+}
+.dark-mode #saved-items .container .course-grid .course-item .likes i {
+  margin-right: 0.3rem;
+}
+.dark-mode #saved-items .container .course-grid .course-item .likes p {
+  margin: 0;
+  padding: 0;
 }
 
 #contact {
@@ -4020,6 +4298,20 @@ footer .container .social-media a:hover {
   background-color: #6366F1;
   color: white;
 }
+#courses .container .course-grid .course-item .course-box .image-and-best .bookmark:hover::before {
+  content: attr(title);
+  position: absolute;
+  bottom: 50%;
+  left: -150%;
+  transform: translateX(-50%);
+  background-color: black;
+  color: #B4B7C9;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: 700;
+  white-space: nowrap;
+}
 #courses .container .course-grid .course-item .course-box .image-and-best article .best {
   position: absolute;
   top: 1rem;
@@ -4178,6 +4470,20 @@ footer .container .social-media a:hover {
 .dark-mode #courses .container .course-grid .course-item .course-box .image-and-best .bookmark:hover {
   background-color: #6366F1;
   color: white;
+}
+.dark-mode #courses .container .course-grid .course-item .course-box .image-and-best .bookmark:hover::before {
+  content: attr(title);
+  position: absolute;
+  bottom: 50%;
+  left: -150%;
+  transform: translateX(-50%);
+  background-color: black;
+  color: #B4B7C9;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: 700;
+  white-space: nowrap;
 }
 .dark-mode #courses .container .course-grid .course-item .course-box .image-and-best article .best {
   position: absolute;
